Update swager and project base concept
