# docs/swagger.json
@@ -16,13 +16,13 @@
             "post": {
                 "description": "Create an unconfirmed and manual intent",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "intent"
+                    "Intent"
                 ],
                 "summary": "Create an intent",
                 "parameters": [
@@ -59,30 +59,125 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/intent"
+                            "$ref": "#/definitions/main.PaymentIntent"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "405": {
+                        "description": "Method Not Allowed",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/error"
+                            "$ref": "#/definitions/main.RESTError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/error"
+                            "$ref": "#/definitions/main.RESTError"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main.Amount": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "currency": {
+                    "type": "object",
+                    "$ref": "#/definitions/main.Currency"
+                }
+            }
+        },
+        "main.Currency": {
+            "type": "object",
+            "properties": {
+                "ISO_4217": {
+                    "description": "3 Char symbol - ISO 4217",
+                    "type": "string"
+                }
+            }
+        },
+        "main.Customer": {
+            "type": "object",
+            "properties": {
+                "gateway_reference": {
+                    "description": "Gateway reference",
+                    "type": "string"
+                }
+            }
+        },
+        "main.IntentStatus": {
+            "type": "object",
+            "properties": {
+                "gateway_status": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.PaymentIntent": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "object",
+                    "$ref": "#/definitions/main.Amount"
+                },
+                "confirmation_method": {
+                    "description": "Confirmation method",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "Create At",
+                    "type": "integer"
+                },
+                "customer": {
+                    "type": "object",
+                    "$ref": "#/definitions/main.Customer"
+                },
+                "gateway_reference": {
+                    "description": "Gateway reference",
+                    "type": "string"
+                },
+                "intent_status": {
+                    "type": "object",
+                    "$ref": "#/definitions/main.IntentStatus"
+                },
+                "next_action": {
+                    "description": "Next Action",
+                    "type": "string"
+                },
+                "off_session": {
+                    "description": "Off session",
+                    "type": "boolean"
+                },
+                "payment_source": {
+                    "type": "object",
+                    "$ref": "#/definitions/main.PaymentSource"
+                },
+                "user_gateway_reference": {
+                    "description": "User gateway reference",
+                    "type": "string"
+                }
+            }
+        },
+        "main.PaymentSource": {
+            "type": "object",
+            "properties": {
+                "gateway_reference": {
+                    "description": "Gateway reference",
+                    "type": "string"
+                }
+            }
+        },
+        "main.RESTError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
                 }
             }
         }
